--- a/index.html
+++ b/index.html
@@ -204,6 +204,9 @@ p{ margin:10px auto}
 <div id="div_news">
 <p class="Bolder">What's New</p>
 
+<p><span class="style11">(01/11/2021) One survey paper on text classification is accepted by ACM Trans. on  Intelligent Systems and Technology (TIST). 
+</span></p>
+
 <p><span class="style11">(01/10/2021) Our work on UAV anomaly detection through contrastive learning and work on RL Guided Multi-Relational Graph Neural Networks have been accepted by IEEE Trans. on Knowledge and Data Engineering (TKDE) and ACM Trans. on Information Systems (TOIS), respectively. 
 </span></p>
 
@@ -257,9 +260,9 @@ and 4) applied machine/deep learning for representation learning, anomaly detect
 <div id="div_interest">
 
 <p><span class="Bolder">Research Interests </span></p>
-<p><span class="style11">Massive-scale distributed systems of big data, cloud computing and IoT </span></p>
-<p><span class="style11">&bull; Play distributed systems to improve the efficiency and reliability for adapting to ever-changing environments: resource management, resource scheduling, fault tolerance, dependability etc. </span></p>
-<p><span class="style11">&bull; Play with data: system profiling, log analysis and applied deep/machine learning (e.g., GNN) </span></p>
+<p><span class="style11">Broadly, I am interested in designing system modules and/or mechanisms for tackling trade-offs in efficiency, performance, reliability and cost for distributed systems of big data, cloud computing and IoT at scale. Specifically, I </span></p>
+<p><span class="style11">&bull; play distributed systems in terms of resource management, resource scheduling, big data frameworks, fault tolerance, dependability design for adapting the systems to the ever-changing environments </span></p>
+<p><span class="style11">&bull; play big data for system profiling, log analysis and applied deep/machine learning (e.g., GNN, NAS) </span></p>
 </div>
 
 
@@ -445,7 +448,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 <div id="div_services">
 <p><span class="Bolder">Selected Professional Services </span></p>
 
-<p><span class="style11">&bull; Lead Guest Editor: "Massive-Scale Distributed Systems and Cloud Computing" Special Issue in the Big Data and Cognitive Computing Journal </span></p>
+<p><span class="style11">&bull; Lead Guest Editor: "Machine Learning for Dependable Edge Computing Systems and Services" Special Issue in the journal of Big Data and Cognitive Computing (BDCC) </span></p>
 
 <p><span class="style11">&bull; Review Editor on the Editorial Board of Cybersecurity and Privacy, specialty section of Frontiers in Big Data </span></p>
 
