--- a/publications.html
+++ b/publications.html
@@ -139,6 +139,9 @@ Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Da
 <p><span class="style11">&bull; H.Peng, R.Zhang, Y.Dou, R.Yang, J.Zhang, and P.S.Yu. Reinforced Neighborhood Selection Guided Multi-Relational GraphNeural Networks. ACM Trans. on Information Systems (TOIS) <a href="paper/tois2021-riognn.pdf">[paper]</a><a href="https://arxiv.org/abs/2104.07886">[arkiv]</a> 
 </span></p>
 
+<p><span class="style11">  &bull; Q.Li, H.Peng, J.Li, C.Xia, R.Yang, L.Sun, P.S.Yu, L.He. A Survey on Text Classification: from Traditional to Deep Learning. ACM Trans. on  Intelligent Systems and Technology (TIST) <a href="paper/tist2021.pdf">[paper]</a> 
+</span></p>
+
 <p lang="en-US"><span class="red">2020</span></p>
 
 <p><span class="style11">  &bull; R.Yang, C.Hu, X.Sun, P.Garraghan, T.Wo, Z.Wen, H.Peng, J.Xu and C.Li. Performance-aware Speculative Resource Oversubscription for Large-scale Clusters, 
