--- a/index.html
+++ b/index.html
@@ -131,11 +131,7 @@ p{ margin:10px auto}
 
 <p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.leeds.ac.uk">University of Leeds</a>, UK </p>
 
-<!-- p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Research Scientist, <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center(BDBC)</a>, <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China </p -->
-
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office (LS):&nbsp; Room 8.02, E.C.Stoner Building, Leeds, UK, LS2 9JT &nbsp;</p>
-<!-- p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office (BJ):&nbsp; Room G504, New Main Building, No.37,Xueyuan Rd.,Haidian District,Beijing, China, 100191.&nbsp;</p-->
-
+<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office (LS):&nbsp; 3.25, Sir William Henry Bragg Building, Leeds, UK, LS2 9BW &nbsp;</p>
 
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: r.yang1 AT leeds DOT ac DOT uk (main) or renyu.yang1 AT gmail DOT com &nbsp; </p>
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Links: &nbsp;&nbsp;
@@ -352,13 +348,15 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">~$  <strong> grants -l </strong> </span></p>
 
 
-<p><span class="style11">&bull; Algorithmic Support for Massive Scale Distributed Systems (EP/T01461X/1), funded by UK Engineering and Physical Sciences Research Council (EPSRC), co-author and project leader, 2020.9 - now </span></p> 
+<p><span class="style11">&bull; Enhanced Edge-Cloud Infrastructure for Distributed Intelligent Computing (Alan Turing Pilot Project, £50K), funded by UK Alan Turing Institute, Co-I, 2021 </span></p> 
 
-<p><span class="style11">&bull; Server Modelling Capability (No.45904), funded by Innovate UK Programme, UKRI, co-author and key member, 2020.2 - 2020.8 </span></p>
+<p><span class="style11">&bull; Algorithmic Support for Massive Scale Distributed Systems (EP/T01461X/1, £1.1M) funded by UK Engineering and Physical Sciences Research Council (EPSRC), co-author and project leader, 2020.9 - now </span></p> 
 
-<p><span class="style11">&bull; BODEN TYPE Data Centre ONE Project (European Comission’s Horizon 2020 Programme), member, 2018.6 - 2019.12 </span></p>
+<p><span class="style11">&bull; Server Modelling Capability (No.45904, £300K), funded by Innovate UK Programme, UKRI, co-author and key member, 2020.2 - 2020.8 </span></p>
 
-<p><span class="style11">&bull; Pin the Tail: Understanding Straggler Manifestation in Internet-based Distributed Systems (EP/T01461X/1), UK Engineering and Physical Sciences Research Council (EPSRC), member, 2017.9 - 2019.12 </span></p>
+<p><span class="style11">&bull; Boden Type Data Center One (No.768875, €2.87M), funded by European Comission’s Horizon 2020 Programme (Horizon 2020), member, 2018.6 - 2019.12 </span></p>
+
+<p><span class="style11">&bull; Pin the Tail: Understanding Straggler Manifestation in Internet-based Distributed Systems (EP/P031617/1, £97K), UK Engineering and Physical Sciences Research Council (EPSRC), member, 2017.9 - 2019.12 </span></p>
 
 
 
@@ -366,7 +364,7 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">&bull; Storage Model and Mechanism for Joint Clouds (No. 2016YFB1000103), supported by National Key Research and Development Programme, co-author, project leader/coordinator, 2016.5 - 2017.11  </span></p>
 
-<p><span class="style11">&bull; On-demand Resource Aggregation and Execution in Massive-scale iVCE Environments (No.2011CB302602), supported by China 973 Fundamental  Research and Development Programme, co-author, project leader/coordinator, 2012.1 - 2015.9 </span></p>
+<p><span class="style11">&bull; On-demand Resource Aggregation and Execution in Massive-scale iVCE Environments (No.2011CB302602), supported by China 973 Fundamental Research and Development Programme, co-author, project leader/coordinator, 2012.1 - 2015.9 </span></p>
 
 <p><span class="style11">&bull; ChinaCloud Phase II: Fundmental Key Software for Cloud Platforms (No.2013AA01A213), supported by National 863 Hi-Tech Research and Development Programme, Key Member, 2013.1 - 2014.1 </span></p>
 
@@ -469,7 +467,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 <p><span class="style11">&bull;   <strong>Outstanding Service Award</strong>, IEEE JCC-SOSE, 2020 </p>
 
 <p><span class="style11">&bull;   <strong>The Grand Class </strong> of Scientific and Technological Progress Award of Chinese Institute of Electronics, 2017 (2017年度中国电子学会科技进步特等奖) </p>
-<p><span class="style11">&bull;   The State Scientific and Technological Progress Award Nominee, 2018 (2018年度国家科学进步一等奖提名) </p>
+<p><span class="style11">&bull;   The State Scientific and Technological Progress Award, 1st Prize Nominee, 2018 (2018年度国家科学进步一等奖提名) </p>
 
 <p><span class="style11">&bull;   <strong>Outstanding Graduate Award </strong> of Beijing Graduates, 2017 </p>
 <p><span class="style11">&bull;  <strong>Guanghua Scholarship Award </strong> for outstanding students, 2014 </p>
