--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">~$  <strong> grants -l </strong> </span></p>
 
 
-<p><span class="style11">&bull; Enhanced Edge-Cloud Infrastructure for Distributed Intelligent Computing (Alan Turing Pilot Project, £50K), funded by UK Alan Turing Institute, Co-I, 2021 </span></p> 
+<p><span class="style11">&bull; Enhanced Edge-Cloud Infrastructure for Distributed Intelligent Computing (£50K), Co-I, 2021 </span></p> 
 
 <p><span class="style11">&bull; Algorithmic Support for Massive Scale Distributed Systems (EP/T01461X/1, £1.1M) funded by UK Engineering and Physical Sciences Research Council (EPSRC), co-author and project leader, 2020.9 - now </span></p> 
 
