--- a/publications.html
+++ b/publications.html
@@ -24,7 +24,7 @@
 	{font-weight:bold}
 .red
 	{text-align:justify;
-	font-size:12pt;
+	font-size:11pt;
 	font-weight: bold;
 	font-family:Arial,"\6977 \4F53 ";
 	color:#F00}
@@ -186,7 +186,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <a href="paper/socc2019-perphon.pdf"> [paper]</a>
 </span></p>
 
-<p><span class="style11">  &bull; H.Peng, J.Li, S.Wang, L.Wang, Q.Gong, R.Yang, B.Li, L.He and P.S.Yu. Hierarchical Taxonomy-Aware and Attentional Graph Capsule RCNNs for Large-Scale Multi-Label Text Classification. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2019 <a href="paper/tkde2019.pdf">[paper]</a>
+<p><span class="style11">  &bull; H.Peng, J.Li, S.Wang, L.Wang, Q.Gong, R.Yang, B.Li, L.He and P.S.Yu. Hierarchical Taxonomy-Aware and Attentional Graph Capsule RCNNs for Large-Scale Multi-Label Text Classification. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2019 <a href="paper/tkde2019.pdf">[paper]</a>  <span class="red">(Highly Cited Paper)</span>
 </span></p> 
 
 <p><span class="style11">  &bull; S.Xue, C.Hu, J.Zhu, R.Yang*. Shaready: A Resource-Isolated Workload Co-location System. in the 13th IEEE SOSE, 2019 
@@ -227,7 +227,7 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 <a href="paper/tsc2016.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">  &bull; Z.Wen, R.Yang*, P.Garraghan, T.Lin, J.Xu and M.Rovatsos. Fog Orchestration for IoT Services, in IEEE Internet Computing (IC), IEEE Computer Society  (SCI-IF = 1.929, Q1)  <a href="paper/ic2017.pdf">[paper]</a>
+<p><span class="style11">  &bull; Z.Wen, R.Yang*, P.Garraghan, T.Lin, J.Xu and M.Rovatsos. Fog Orchestration for IoT Services, in IEEE Internet Computing (IC), IEEE Computer Society  (SCI-IF = 1.929, Q1)  <a href="paper/ic2017.pdf">[paper]</a> <span class="red">(Highly Cited Paper)</span>
 </span></p>
 
 <p><span class="style11">  &bull; X.Sun, C.Hu, R.Yang*, P.Garraghan, C.Li. ROSE: Cluster Scheduling through Efficient Resource Overselling, ACM/USENIX SOSP, 2017 (poster) <a href="paper/sosp2017-poster.pdf">[paper]</a>
@@ -298,7 +298,7 @@ A Method for Private Car Transportation Dispatching Based on a Passenger Demand 
 
 <p lang="en-US"> <span class="red">2013 </span></p>
 
-<p><span class="style11">  &bull; I.Moreno, R.Yang, J.Xu, T.Wo. Improved Energy-Efficiency in Cloud Datacenters with Interference-Aware Virtual Machine Placement. in the 11th IEEE ISADS 2013 (Best Paper Award) <a href="paper/isads2013.pdf">[paper]</a>
+<p><span class="style11">  &bull; I.Moreno, R.Yang, J.Xu, T.Wo. Improved Energy-Efficiency in Cloud Datacenters with Interference-Aware Virtual Machine Placement. in the 11th IEEE ISADS 2013, <a href="paper/isads2013.pdf">[paper]</a> <span class="red">(Best Paper Award)</span>
 </span></p>
 <p><span class="style11">  &bull; R.Yang, I.Moreno, J.Xu, T.Wo. An Analysis of Performance Interference Effects on Energy-Efficiency of Virtualized Cloud Environments, in the IEEE CloudCom 2013, <a href="paper/cloudcom2013.pdf">[paper]</a>  
 </span></p>
