--- a/publications_topics.html
+++ b/publications_topics.html
@@ -24,14 +24,14 @@
 	{font-weight:bold}
 .red
 	{text-align:justify;
-	font-size:12pt;
+	font-size:11pt;
 	font-weight: bold;
 	font-family:Arial,"\6977 \4F53 ";
 	color:#F00}
 .blue_paper_title
 	{color:#03F;
 	text-align:justify;
-	font-size:12pt;
+	font-size:11pt;
 	font-family:Arial,"\6977 \4F53 "}
 .bolder
 	{font-weight:bold}
@@ -147,7 +147,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
  </span></p>
 
 
-<p><span class="style11">&bull; Z.Wen, R.Yang*, P.Garraghan, T.Lin, J.Xu and M.Rovatsos. Fog Orchestration for IoT Services, in IEEE Internet Computing (IC), IEEE Computer Society  (SCI-IF = 1.929, Q1)  <a href="paper/ic2017.pdf">[paper]</a>
+<p><span class="style11">&bull; Z.Wen, R.Yang*, P.Garraghan, T.Lin, J.Xu and M.Rovatsos. Fog Orchestration for IoT Services, in IEEE Internet Computing (IC), IEEE Computer Society  (SCI-IF = 1.929, Q1)  <a href="paper/ic2017.pdf">[paper]</a> <span class="red">(Highly Cited Paper)</span>
 </span></p>
 
 <p><span class="style11">&bull; G.Yeung, B.Borowiec, R.Yang*, A.Friday, R.Harper, P.Garraghan. Horus: An Interference-aware Resource Manager for Deep Learning Systems. International Conference on Algorithms and Architectures for Parallel Processing (ICA3PP), 2020 
@@ -244,7 +244,7 @@ Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Da
 <a href="http://arxiv.org/abs/1910.05433">[arxiv]</a><a href="paper/csur2020.pdf">[paper]</a> </span></p>
 
 
-<p><span class="style11">&bull; H.Peng, J.Li, S.Wang, L.Wang, Q.Gong, R.Yang, B.Li, L.He and P.S.Yu. Hierarchical Taxonomy-Aware and Attentional Graph Capsule RCNNs for Large-Scale Multi-Label Text Classification. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2019 <a href="paper/tkde2019.pdf">[paper]</a>
+<p><span class="style11">&bull; H.Peng, J.Li, S.Wang, L.Wang, Q.Gong, R.Yang, B.Li, L.He and P.S.Yu. Hierarchical Taxonomy-Aware and Attentional Graph Capsule RCNNs for Large-Scale Multi-Label Text Classification. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2019 <a href="paper/tkde2019.pdf">[paper]</a><span class="red"> (Highly Cited Paper)</span>
 </span></p> 
 
 <p><span class="style11">&bull; R.Yang, Z.Zhao, J. Ouyang, J.Xu. Cloud Evolution: Enterprise-Wide Digitalization over Clouds. Book Chapter, World Scientific Reference on Digital Data-Centric Platforms in the Age of IoT (invited chapter and in press) </span></p>
@@ -289,7 +289,7 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 <p><span class="style11">&bull; B.Zhang, J.Kang, T.Wo, Y.Wang, R.Yang. a Flexible and Scalable Affinity Lock for the Kernel, in the 16th IEEE HPCC 2014, <a href="paper/hpcc2014.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; I.Moreno, R.Yang, J.Xu, T.Wo. Improved Energy-Efficiency in Cloud Datacenters with Interference-Aware Virtual Machine Placement. in the 11th IEEE ISADS 2013 (Best Paper Award) <a href="paper/isads2013.pdf">[paper]</a>
+<p><span class="style11">&bull; I.Moreno, R.Yang, J.Xu, T.Wo. Improved Energy-Efficiency in Cloud Datacenters with Interference-Aware Virtual Machine Placement. in the 11th IEEE ISADS 2013 <a href="paper/isads2013.pdf">[paper]</a><span class="red">(Best Paper Award)</span>
 </span></p>
 <p><span class="style11">&bull; R.Yang, I.Moreno, J.Xu, T.Wo. An Analysis of Performance Interference Effects on Energy-Efficiency of Virtualized Cloud Environments, in the IEEE CloudCom 2013, <a href="paper/cloudcom2013.pdf">[paper]</a>  
 </span></p>
