--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@ p{ margin:10px auto}
 <div id="div_news">
 <p class="Bolder">What's New</p>
 
+<p><span class="style11"> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI-2022.pdf">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), Deadline: 30 Sept 2022 </span></p>
+
+
 <p><span class="style11">(01/11/2021) One survey paper on text classification is accepted by ACM Trans. on  Intelligent Systems and Technology (TIST). 
 </span></p>
 
@@ -237,17 +240,13 @@ p{ margin:10px auto}
 
 <p class="Bolder">Short Bio</p> 
 <p><span class="style11"> I am currently a UK EPSRC-funded research fellow at the <a href="https://eps.leeds.ac.uk/computing">School of Computing</a>, <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a>, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://bdbc.buaa.edu.cn">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China. I was a research scientist at <a href="http://www.edgetic.com">Edgetic Ltd.</a>, a UK-based startup high-tech company that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of data center efficiency. 
-I have been leading several China/UK national and international projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. We are building large-scale resource management infrastructures and system profiling framework to support those functionalities. My research mainly focuses on: 
-1) scalable and intelligent resource scheduling at Internet scale; 
-2) system dependability by leveraging effective system failover, long-tail task mitigation, and quantitative reliability modeling etc.; 
-3) improved system utility for resource management through resource over-subscription mechanism and multi-objective optimization, etc.; 
-and 4) applied machine/deep learning for representation learning, anomaly detection, etc. 
+I have been (co-)leading several China/UK national and international projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. We build large-scale resource management infrastructures and system profiling framework to support those functionalities. 
 </span></p>
 
 <p><span class="style11">  I has published more than 45 peer-reviewed papers, in the field of distributed systems, cloud computing, big data analytics and applied deep learning techniques. They appear in top journals and conference proceedings such as IEEE Trans. on Parallel and Distributed Systems (TPDS), IEEE Trans. on Computers (TC), IEEE Trans. on Knowledge and Data Engineering (TKDE), IEEE Trans. on Neural Networks and Learning Systems (TNNLS), IEEE Trans. on Services Computing (TSC), ACM Trans. on Information Systems (TOIS), ACM Trans. on Knowledge Discovery from Data (TKDD), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. One of my work won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participation and contribution to the reliable resource management and scheduling at massive scale.  
 	</span></p>
 
-<p><span class="style11"> I obtained my BSc and PhD from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China in June 2011 and January 2017, respectively. I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I co-founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group in COLAB. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE.
+<p><span class="style11"> I obtained my BSc and PhD from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China in June 2011 and January 2017, respectively. I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I co-founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group in COLAB. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE and ACM.
 </span></p>
 
 </div>
@@ -256,9 +255,10 @@ and 4) applied machine/deep learning for representation learning, anomaly detect
 <div id="div_interest">
 
 <p><span class="Bolder">Research Interests </span></p>
-<p><span class="style11">Broadly, I am interested in designing system modules and/or mechanisms for tackling trade-offs in efficiency, performance, reliability and cost for distributed systems of big data, cloud computing and IoT at scale. Specifically, I </span></p>
-<p><span class="style11">&bull; play distributed systems in terms of resource management, resource scheduling, big data frameworks, fault tolerance, dependability design for adapting the systems to the ever-changing environments </span></p>
-<p><span class="style11">&bull; play big data for system profiling, log analysis and applied deep/machine learning (e.g., GNN, NAS) </span></p>
+<p><span class="style11">Broadly, I am interested in designing system modules and/or mechanisms for tackling trade-offs in efficiency, performance, reliability and cost for distributed systems of big data, cloud computing and IoT at scale. My research mainly focuses on: 
+	1) resource efficiency of large-scale datacenters through QoS-aware scheduling and resource management, and multi-objective optimization, etc.; 
+	2) system dependability by leveraging effective system failover, long-tail task mitigation, and quantitative reliability modeling etc.; 
+	3) machine/deep learning systems and applications including GPU scheduling and parallelism, graph representation learning, anomaly detection, etc. </span></p>
 </div>
 
 
@@ -506,7 +506,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">  Updated by Sept 2021 </span></p>
+<p><span class="style11">  Updated by Jan 2022 </span></p>
 
 </td>
 
