--- a/publications_topics.html
+++ b/publications_topics.html
@@ -110,7 +110,7 @@ p{ margin:10px auto}
 
 
 
-<p lang="en-US"><span class="red"> Distributed System Resource Management: Scheduling and Orchestration </span></p>
+<p lang="en-US"><span class="red"> Distributed System and Resource Management: Scheduling and Orchestration </span></p>
 
 
 <p><span class="style11">&bull; R.Yang. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 (with Honor)  
@@ -138,7 +138,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 </span></p>
 
 
-<p><span class="style11">&bull; J.Zhu', R.Yang', C.Hu, T.Wo, S.Xue, J.Ouyang, J.Xu. Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference. IEEE/ACM International Symposium on Cluster, Cloud and Internet Computing (CCGRID), 2021 <a href="paper/ccgrid2021.pdf">[paper]</a>  </span></p>
+<p><span class="style11">&bull; R.Yang', J.Zhu', C.Hu, T.Wo, S.Xue, J.Ouyang, J.Xu. Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference. IEEE/ACM International Symposium on Cluster, Cloud and Internet Computing (CCGRID), 2021 <a href="paper/ccgrid2021.pdf">[paper]</a>  </span></p>
 
 
 <p><span class="style11">&bull; R.Yang, Z.Wen, D.Mckee, T.Lin, J.Xu and P.Garraghan. Software-Defined Fog Orchestration for IoT Services. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1 <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091">[link]</a>
@@ -180,7 +180,11 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 
 <p lang="en-US"><span class="red"> System Dependability: Reliability and Fault Tolerance </span></p>
 
-<p><span class="style11">&bull; Y.Hei', R.Yang', H.Peng, L.Wang, X.Xu, J.Liu, H.Liu, J.Xu, L.Sun. Hawk: Reliable Android Malware Detection through Heterogeneous Graph Neural Network. IEEE Trans. on Neural Networks and Learning Systems (TNNLS), 2021  <a href="paper/tnnls2021-hawk.pdf">[paper]</a> 
+<p><span class="style11">&bull; T.Li, Z.Hong, Q.Cai, L.Yu, Z.Wen, and R.Yang*. BISSIAM: Bispectrum Siamese Network Based
+	Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 <a href="paper/tkde2021-bissiam.pdf">[paper]</a> 
+	</span></p>
+
+<p><span class="style11">&bull; R.Yang', Y.Hei', H.Peng, L.Wang, X.Xu, J.Liu, H.Liu, J.Xu, L.Sun. Hawk: Reliable Android Malware Detection through Heterogeneous Graph Neural Network. IEEE Trans. on Neural Networks and Learning Systems (TNNLS), 2021  <a href="paper/tnnls2021-hawk.pdf">[paper]</a> 
 </span></p>
 
 <p><span class="style11">&bull; Y.Song, T.Wo*, R.Yang*, Q.Shen and J.Xu. Joint Optimization of Cache Placement and Request Routing in Unreliable Networks. Journal of Parallel and Distributed Computing (JPDC), 2021  <a href="paper/jpdc2021.pdf">[paper]</a> 
@@ -218,11 +222,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 
 
 
-<p lang="en-US"><span class="red"> Big Data and Applied Machine Learning</span></p>
-
-<p><span class="style11">&bull; T.Li, Z.Hong, Q.Cai, L.Yu, Z.Wen, and R.Yang*. BISSIAM: Bispectrum Siamese Network Based
-Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 <a href="paper/tkde2021-bissiam.pdf">[paper]</a> 
-</span></p>
+<p lang="en-US"><span class="red"> Big Data and Deep Learning: Systems and Applications </span></p>
 
 <p><span class="style11">&bull; H.Peng, R.Yang, Z.Wang, J.Li, L.He, P.S.Yu, A.Zomaya, R.Ranjan. LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks. IEEE Trans. on Computers (TC), 2021 
 <a href="paper/tc2021.pdf">[paper]</a> 
