--- a/index.html
+++ b/index.html
@@ -203,6 +203,9 @@ p{ margin:10px auto}
 <p><span class="style11"> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI-2022.pdf">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), Deadline: 30 Sept 2022 </span></p>
 
 
+<p><span class="style11">(27/01/2022) received Alan Turing Institute Post-Doctoral Enrichment Award 2022.  
+</span></p>
+
 <p><span class="style11">(01/11/2021) One survey paper on text classification is accepted by ACM Trans. on  Intelligent Systems and Technology (TIST). 
 </span></p>
 
@@ -463,6 +466,8 @@ I have been collaborating closely with many brilliant researchers around the wor
 <p><span class="style11">&bull; More professional services can be found here: <a href="services.html">~$ services</a> </span></p>
 
 <p><span class="Bolder">Selected Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
+
+<p><span class="style11">&bull;	  <strong>Alan Turing Institute Post-Doctoral Enrichment Award</strong>, 2022. </p>
 
 <p><span class="style11">&bull;   <strong>Outstanding Service Award</strong>, IEEE JCC-SOSE, 2020 </p>
 
