--- a/index.html
+++ b/index.html
@@ -350,10 +350,11 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">~$  <strong> grants -l </strong> </span></p>
 
+<p><span class="style11">&bull; Resilient Multi-Agent Deep Reinforcement Learning for Green Logistics Scheduling, funded by the Turing Enrichment Scheme, the Alan Turing Institute, PI, 2022.2 - 2022.10 </span></p> 
 
-<p><span class="style11">&bull; Enhanced Edge-Cloud Infrastructure for Distributed Intelligent Computing (£50K), Co-I, 2021 </span></p> 
+<p><span class="style11">&bull; Enhanced Edge-Cloud Infrastructure for Distributed Intelligent Computing (£50K), funded by Turing Pilot Project, the Alan Turing Institute, Co-I, 2022.1 - 2022.9 </span></p> 
 
-<p><span class="style11">&bull; Algorithmic Support for Massive Scale Distributed Systems (EP/T01461X/1, £1.1M) funded by UK Engineering and Physical Sciences Research Council (EPSRC), co-author and project leader, 2020.9 - now </span></p> 
+<p><span class="style11">&bull; Algorithmic Support for Massive Scale Distributed Systems (EP/T01461X/1, £1.1M) funded by UK Engineering and Physical Sciences Research Council (EPSRC), co-author and project leader, 2020.9 - 2023.8 </span></p> 
 
 <p><span class="style11">&bull; Server Modelling Capability (No.45904, £300K), funded by Innovate UK Programme, UKRI, co-author and key member, 2020.2 - 2020.8 </span></p>
 
