--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	{text-align:center}
 .STYLE14 {text-align: justify; font-size: 14pt; font-family: Arial,"\6977 \4F53 "; color: #F00; }
 .STYLE15 {font-size: 24pt;font-family: Arial,"\6977 \4F53 ";}
-.STYLE16 {text-align: justify; font-size: 16pt; font-family: Arial,"\6977 \4F53 "; font-style: italic; }
+.STYLE16 {text-align: justify; font-size: 12pt; font-family: Arial,"\6977 \4F53 "; font-style: italic; }
 .STYLE17 {text-align: justify; font-size: 12pt; font-family: Arial,"\6977 \4F53 "; font-weight: bold; }
 -->
 * {
@@ -123,9 +123,9 @@ p{ margin:10px auto}
 <div align="left">
 &nbsp;
 </div>
-<!--p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp;"I find that the harder I work, the more luck I seem to have."  - Thomas Jefferson</p-->
+<p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp;"I find that the harder I work, the more luck I seem to have." Thomas Jefferson</p>
 
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Fellow </p>
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Fellow</p>
 
 <p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://eps.leeds.ac.uk/computing">School of Computing</a>, <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a></p>
 
@@ -215,7 +215,7 @@ p{ margin:10px auto}
 <p><span class="style11">(12/09/2021) Our work on lifelong house price prediction and work on malware detection have been accepted by IEEE Trans. on Knowledge and Data Engineering (TKDE) and IEEE Trans. on Neural Networks and Learning Systems (TNNLS) respectively. 
 </span></p> 
 
-<p><span class="style11">(10/07/2021) I will serve as PC member for International Joint Conferences on Artificial Intelligence 2022 (IJCAI'22) and European Conference on Artificial Intelligence (ECAI'22).
+<p><span class="style11">(10/07/2021) I will serve as PC member for International Joint Conferences on Artificial Intelligence 2022 (IJCAI'22), European Conference on Artificial Intelligence (ECAI'22), IEEE CLOUD'22.
 </span></p>
 
 <p><span class="style11">(20/06/2021) Our work on joint optmization of cache placement and request routing is accepted by Journal of Parallel and Distributed Computing (JPDC).  
@@ -243,10 +243,10 @@ p{ margin:10px auto}
 
 <p class="Bolder">Short Bio</p> 
 <p><span class="style11"> I am currently a UK EPSRC-funded research fellow at the <a href="https://eps.leeds.ac.uk/computing">School of Computing</a>, <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a>, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://bdbc.buaa.edu.cn">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China. I was a research scientist at <a href="http://www.edgetic.com">Edgetic Ltd.</a>, a UK-based startup high-tech company that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of data center efficiency. 
-I have been (co-)leading several China/UK national and international projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. We build large-scale resource management infrastructures and system profiling framework to support those functionalities. 
+I have been (co-)leading several China/UK national and international projects in terms of distributed resource management and scheduling, massive-scale data analysis for intelligent decision making, and deep learning systems. We build large-scale resource management infrastructures and system profiling framework to support those functionalities. 
 </span></p>
 
-<p><span class="style11">  I has published more than 45 peer-reviewed papers, in the field of distributed systems, cloud computing, big data analytics and applied deep learning techniques. They appear in top journals and conference proceedings such as IEEE Trans. on Parallel and Distributed Systems (TPDS), IEEE Trans. on Computers (TC), IEEE Trans. on Knowledge and Data Engineering (TKDE), IEEE Trans. on Neural Networks and Learning Systems (TNNLS), IEEE Trans. on Services Computing (TSC), ACM Trans. on Information Systems (TOIS), ACM Trans. on Knowledge Discovery from Data (TKDD), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. One of my work won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participation and contribution to the reliable resource management and scheduling at massive scale.  
+<p><span class="style11">  I has published more than 45 peer-reviewed papers, in the field of distributed systems, cloud computing, data centric engineering, and applied deep learning techniques. They appear in top journals and conference proceedings such as IEEE Trans. on Parallel and Distributed Systems (TPDS), IEEE Trans. on Computers (TC), IEEE Trans. on Knowledge and Data Engineering (TKDE), IEEE Trans. on Neural Networks and Learning Systems (TNNLS), IEEE Trans. on Services Computing (TSC), ACM Trans. on Information Systems (TOIS), ACM Trans. on Knowledge Discovery from Data (TKDD), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. I won the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral Enrichment Award 2022 for resilient deep reinforcement learning. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key contribution to the reliable resource management at massive scale and its industrial and societal impact.  
 	</span></p>
 
 <p><span class="style11"> I obtained my BSc and PhD from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China in June 2011 and January 2017, respectively. I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I co-founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group in COLAB. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE and ACM.
@@ -259,20 +259,20 @@ I have been (co-)leading several China/UK national and international projects in
 
 <p><span class="Bolder">Research Interests </span></p>
 <p><span class="style11">Broadly, I am interested in designing system modules and/or mechanisms for tackling trade-offs in efficiency, performance, reliability and cost for distributed systems of big data, cloud computing and IoT at scale. My research mainly focuses on: 
-	1) resource efficiency of large-scale datacenters through QoS-aware scheduling and resource management, and multi-objective optimization, etc.; 
-	2) system dependability by leveraging effective system failover, long-tail task mitigation, and quantitative reliability modeling etc.; 
-	3) machine/deep learning systems and applications including GPU scheduling and parallelism, graph representation learning, anomaly detection, etc. </span></p>
+	1) resource efficiency of large-scale datacenters through data-driven design, QoS-aware scheduling and resource management, and multi-objective optimization, etc.; 
+	2) system dependability by leveraging fault tolerance and failover, long-tail task mitigation, and quantitative reliability modeling etc.; 
+	3) machine/deep learning systems and applications including data-centric engineering, GPU scheduling and parallelism, graph representation learning, anomaly detection, etc. </span></p>
 </div>
 
 
 <div id="div_exp">
 <p><span class="Bolder">Education</span></p>
 
-<p><span class="style11">&bull;  2007.9 - 2011.6: &nbsp;&nbsp; BSc. Computer Science (equivalent to 1st Class Honours), supervised by Dr. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&bull;  2007.9 - 2011.6: &nbsp;&nbsp; BSc. Computer Science (equivalent to 1st Class Honours), supervised by Prof. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&bull;  2011.9 - 2017.1: &nbsp;&nbsp; PhD. Computer Science (with Distinction Honor), Supervised by Prof. Jie Xu, Beihang University, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&bull;  2011.9 - 2017.1: &nbsp;&nbsp; PhD. Computer Science (with Distinction Honor), supervised by Prof. Jie Xu and Prof. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&bull;  2012.10 - 2013.1, 2013.11-2013.12 and 2016.3-2016.4: &nbsp;  Exchange PhD. Student (Supervised by <a href="http://www.paultownend.com/">Dr. Paul Townend </a> and Prof. Jie Xu), &nbsp; <a href="http://www.leeds.ac.uk" target="_blank"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
+<p><span class="style11">&bull;  2011.9 - 2017.1: &nbsp;&nbsp; Exchange PhD. Student (funded by China 973 iVCE Grant and EPSRC CoLab Grant), supervised by Prof. Jie Xu and <a href="http://www.paultownend.com/">Dr. Paul Townend</a>, <a href="http://www.leeds.ac.uk" target="_blank"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
 
 <p><span class="Bolder">Academia & Industry Experience  </span></p>
 
@@ -323,9 +323,9 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
 <p><span class="style11">&bull; Z.Wen, R.Yang*, P.Garraghan, T.Lin, J.Xu and M.Rovatsos. <a href="paper/ic2017.pdf">Fog Orchestration for IoT Services</a>. IEEE Internet Computing, 2017  </span></p>
 
-<p><span class="style11">&bull; R.Yang', J.Zhu', C.Hu, T.Wo, S.Xue, J.Ouyang and J.Xu. <a href="paper/ccgrid2021.pdf">Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference</a>. IEEE/ACM CCGRID 2021 and ACM SoCC 2019 (poster, demo) </span></p>
+<p><span class="style11">&bull; R.Yang', J.Zhu', C.Hu, T.Wo, S.Xue, J.Ouyang and J.Xu. <a href="paper/ccgrid2021.pdf">Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference</a>. IEEE/ACM CCGRID 2021 and ACM SoCC 2019 <a href="paper/socc2019-perphon.pdf">(poster, demo)</a> </span></p>
 
-<p><span class="style11">&bull; X.Sun, C.Hu, R.Yang*, P.Garraghan, T.Wo, J.Xu, J.Zhu, C.Li.  <a href="paper/icdcs2018.pdf">ROSE: Cluster Resource Scheduling via Speculative Over-subscription</a>. IEEE ICDCS 2018 and ACM SOSP 2017 (poster, demo)</span></p>
+<p><span class="style11">&bull; X.Sun, C.Hu, R.Yang*, P.Garraghan, T.Wo, J.Xu, J.Zhu, C.Li.  <a href="paper/icdcs2018.pdf">ROSE: Cluster Resource Scheduling via Speculative Over-subscription</a>. IEEE ICDCS 2018 and ACM SOSP 2017 <a href="paper/sosp2017-poster.pdf">(poster, demo)</a></span></p>
 
 <p><span class="style11">&bull;  Z.Zhang, C.Li, Y.Tao, R.Yang*, H.Tang and J.Xu. <a href="paper/vldb2014.pdf">Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale</a>. VLDB 2014</span></p>
 
@@ -350,7 +350,7 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">~$  <strong> grants -l </strong> </span></p>
 
-<p><span class="style11">&bull; Resilient Multi-Agent Deep Reinforcement Learning for Green Logistics Scheduling, funded by the Turing Enrichment Scheme, the Alan Turing Institute, PI, 2022.2 - 2022.10 </span></p> 
+<p><span class="style11">&bull; Resilient Multi-Agent Deep Reinforcement Learning for Green Logistics Scheduling, funded by the Turing Enrichment Scheme, the Alan Turing Institute, PI, 2022.3 - 2022.10 </span></p> 
 
 <p><span class="style11">&bull; Enhanced Edge-Cloud Infrastructure for Distributed Intelligent Computing (£50K), funded by Turing Pilot Project, the Alan Turing Institute, Co-I, 2022.1 - 2022.9 </span></p> 
 
@@ -374,8 +374,6 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">&bull; ChinaCloud Phase I: Resource Virtualization and Scheduling (No. 2011AA01A202),  supported by National 863 Hi-Tech Research and Development Programme, Key Member, 2011.9 - 2013.12 </span></p> 
 
-<p><span class="style11">&bull; Nature Science Foundation of China (91118008, 90818028, 6117029 4)</span></p>
-
 </div>
 
 <div id="div_team">
@@ -388,13 +386,14 @@ I had the opportunity to work closely with many institutes around the world and 
 I have been co-advising and/or working closely with many students mainly from COLAB. The programmes primarily include PhD and postgraduate projects (MSc research programme in China and MSc projects of module COMP5200M and COMP3211 in University of Leeds.) </span></p>
 
 <p><span class="style11">~$  <strong> team -l current </strong> </span></p>
-<p><span class="style11">&bull; PhD Students: Jianyong Zhu (2017.5- , Beihang Uni., with Prof. Chunming Hu), <a href="https://xshaun.github.io/">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Dr. Zheng Wang), Gingfung Yeung (2018.1- , Lancaster University, UK, with Dr. Peter Garraghan), Yiming Hei (2019.9- , Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng), Youmei Song (2017.9- , Beihang Uni., with Prof. Jie Xu and Prof. Tianyu Wo) </span></p>
-<p><span class="style11">&bull; BSc Students: Chris von Fay-Siebenburgen, Ziyao Wang, Zixuan Xu, Jacob Hall, Adam Stoddart (BSc, 2011-2022, Uni. of Leeds, with Prof. Jie Xu) </span></p>
+<p><span class="style11">&bull; PhD Students: Jianyong Zhu (2017.9- , Beihang Uni., with Prof. Chunming Hu), <a href="https://xshaun.github.io/">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Dr. Zheng Wang), Yiming Hei (2019.9- , Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng), Youmei Song (2017.9- , Beihang Uni., with Prof. Tianyu Wo) </span></p>
+<p><span class="style11">&bull; BSc Students: Chris von Fay-Siebenburgen, Ziyao Wang, Zixuan Xu, Jacob Hall, Adam Stoddart (BSc, 2021-2022, Uni. of Leeds, with Prof. Jie Xu) </span></p>
 <p><span class="style11">&bull; Also closely working with Research Fellows: Dr. Satish Kumar, Dr. Clément Mommessin </span></p>
 
 
 <p><span class="style11">~$  <strong> team -l alumni </strong> </span></p>
 
+<p><span class="style11">&bull; Gingfung Yeung (2019.1-2021.12, Lancaster University, UK, with Dr. Peter Garraghan) </span></p>
 <p><span class="style11">&bull; Wang Tang, Zhenbin Jin, Xianjie Yang (MSc. of COMP5200M, Spring 2021, Uni. of Leeds) </span></p>
 
 <p><span class="style11">&bull; Zixuan Fu, Kenan Jiang, Mengwei Zhao, Chao Guo (MSc. of COMP5200M, 2020 Autumn, Uni. of Leeds)
@@ -459,10 +458,10 @@ I have been collaborating closely with many brilliant researchers around the wor
 <p><span class="style11">&bull; Area/Track Chair: IEEE International Conference on Cloud Computing (CLOUD) 2021. </span></p>
 
 
-<p><span class="style11">&bull; PC Member: IJCAI'21'22, ECAI'22, IEEE CLOUD'20'21, ACM/IEEE UCC'18-'21,  IEEE/ACM BDCAT'16-'21, etc. </span></p>
+<p><span class="style11">&bull; PC Member: IJCAI'21'22, ECAI'22, IEEE CLOUD'20'21'22, ACM/IEEE UCC'18-'21,  IEEE/ACM BDCAT'16-'21, etc. </span></p>
 
 
-<p><span class="style11">&bull; Journal Reviewers: IEEE TPDS, TDSC, TC, TKDE, TSC, TSE, TCC, ACM CSUR, etc. </span></p> 
+<p><span class="style11">&bull; Journal Reviewers: IEEE TPDS, TDSC, TC, TKDE, TKDD, TSC, TSE, TCC, ACM CSUR, etc. </span></p> 
 
 <p><span class="style11">&bull; More professional services can be found here: <a href="services.html">~$ services</a> </span></p>
 
