--- a/news.html
+++ b/news.html
@@ -75,6 +75,28 @@ p{ margin:10px auto}
 <p><span class="Bolder">Events</span></p>
   
 
+<p><span class="style11">(12/09/2021) Our work on lifelong house price prediction and work on malware detection have been accepted by IEEE Trans. on Knowledge and Data Engineering (TKDE) and IEEE Trans. on Neural Networks and Learning Systems (TNNLS) respectively. 
+</span></p> 
+
+<p><span class="style11">(10/07/2021) I will serve as PC member for International Joint Conferences on Artificial Intelligence 2022 (IJCAI'22), European Conference on Artificial Intelligence (ECAI'22), IEEE CLOUD'22.
+</span></p>
+
+<p><span class="style11">(20/06/2021) Our work on joint optmization of cache placement and request routing is accepted by Journal of Parallel and Distributed Computing (JPDC).  
+</span></p>
+
+<p><span class="style11">(27/04/2021) Our work on GPU cluster scheduling is accepted by IEEE Trans. on Parallel and Distributed Systems (TPDS).  
+</span></p>
+
+<p><span class="style11">(23/02/2021) I will serve as Track Chair for IEEE International Conference on Cloud Computing (CLOUD'21). See the <a href ="https://conferences.computer.org/cloud/2021/cfp/">Call for Papers</a> 
+</span></p>
+
+<p><span class="style11">(31/01/2021) Our work on resource efficient incremental learning for heterogenous information networks is accepted by IEEE Trans. on Computers (TC). </span></p>
+
+<p><span class="style11">(17/01/2021) Our work on streaming social event detection is accepted by ACM Trans. on Knowledge Discovery from Data (TKDD). </span></p>
+
+<p><span class="style11">(19/10/2020) I will serve as PC member for International Joint Conferences on Artificial Intelligence 2021 (IJCAI'21).
+</span></p>
+
 <p><span class="style11">(25/01/2020) Our paper 
 "Orchestrating Development Lifecycle of ML-Based IoT Applications" has been accepted to publish in ACM Computing Surveys (CSUR) 2020. 
 </span></p>
